# libvirt-exporter

./: Dockerfile  README.md  libvirt_exporter.py  nova-labels.yml  osinfo-labels.yml  requirements.txt  setup.cfg
libvirt_exporter/: __init__.py  collector.py  main.py
libvirt_exporter/data/: metrics.json
