[metadata]
name = libvirt_exporter
version = attr: libvirt_exporter.__version__
description = Prometheus exporter for libvirt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/libvirt_exporter
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click
    lxml
    prometheus_client
    pyyaml

[options.entry_points]
console_scripts =
    libvirt-exporter = libvirt_exporter.main:main
